<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">精羽门</string>
	<string name="menu_main">首页</string>
	<string name="menu_pay">充值</string>
	<string name="menu_ball_friend">惠球友</string>
	<string name="menu_my">我的</string>
	<string name="loading">正在加载</string>
	<string name="sport_field">运动会所</string>
	<string name="club">俱乐部</string>
	<string name="activity">活动</string>
	<string name="game">比赛</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="remind">提示</string>
	<string name="modify">修改</string>
	<string name="press_more_exit">再按一次退出</string>
	<string name="account_hint">请输入手机号码或账号</string>
	<string name="register_hint">请输入手机号码</string>
	<string name="register_hint_code">请输入验证码</string>
	<string name="account_pasword_hint">请输入密码</string>
	<string name="tel">联系电话</string>
	<string name="about_us">关于我们</string>
	<string name="about_us_content">“精羽门”倡导一起锻炼，一起快乐的体育文化。我们希望通过平台为大众提供优质的服务和便捷的信息渠道，激发大众对体育活动的热情，营造一个全民参与的健康活跃的氛围。</string>


	<string name="user_center">会员中心</string>
	<string name="logout_success">退出登陆成功</string>
	<string name="user_center_no_login">您还没有登录，点击登录</string>
	<string name="user_center_user_name">用户名：</string>
	<string name="user_center_score">积分：</string>
	<string name="user_center_pay_online">在线充值</string>
	<string name="user_center_pay_history">充值记录</string>
	<string name="user_center_mypay_changeto_cdkey">我的充值兑换码</string>
	<string name="user_center_activity_changeto_cdkey">活动次数转兑换码</string>
	<string name="user_center_score_changeto_cdkey">积分兑换码</string>
	<string name="user_center_my_group_activity">我的群活动</string>
	<string name="user_center_my_activity_balance">我的活动余额</string>
	<string name="user_center_my_settled_activity">我的固定活动</string>

</resources>